Fix layout on large screen

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -674,6 +674,10 @@
     .carousel {
       margin-top: 8rem;
     }
+    .carousel__img {
+      height: 85%;
+      max-height: 85%;
+    }
   }
 }
 /***** MD Devices*****/
